<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/lightBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/llBottom"
                android:gravity="center"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    app:lottie_autoPlay="true"
                    app:lottie_imageAssetsFolder="images"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/no_internet" />

                <TextView
                    style="@style/textviewBoldStyle"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/no_internet"
                    android:textColor="@color/blackTxt"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    style="@style/textviewRegularStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:text="@string/internet_desc"
                    android:textColor="@color/blackTxt" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/splash_logo" />

            <Button
                android:id="@+id/btnRetry"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/okay" />

        </LinearLayout>

    </RelativeLayout>
</layout>